--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,6 +2,8 @@ server:
   #port: 7000
   port: 8080
 
+file:
+  upload-dir: ./uploads
 spring:
 #  jpa:
 #    database: h2
@@ -14,6 +16,14 @@ spring:
 #    driverClassName: org.h2.Driver
 #    username: root
 #    password: 123456
+
+  servlet:
+    multipart:
+      enabled: true
+      file-size-threshold: 2KB
+      max-file-size: 200MB
+      max-request-size: 215MB
+
 
   jpa:
     database: mysql
